@@ -32,26 +32,34 @@ DIRS = PUBLIC + '/dirs'
 options = Options()
 
 RE_AUTHOR_BOOK = re.compile(r'fk_books = (\d\d+)')
+RE_BOOK_ADD_AUTHOR = re.compile(r'values \((\d\d+),')
 RE_TITLE_ATTRIBS = re.compile(r'where pk = (\d\d+)')
 
 def get_book_for_attrib(attrib):
     c = GutenbergDatabase.DB.get_cursor()
 
-    c.execute("select fk_books from attributes where pk = %(attrib)s",
+    c.execute("select fk_books from public.attributes where pk = %(attrib)s",
                {'attrib': attrib})
 
     for row in c.fetchall():
         row = GutenbergDatabase.xl(c, row)
         return row.fk_books
 
-
 def check_sql(sql):
     """ return an ebook number needing rebuild """
-    if sql.startswith('update mn_books_authors '):
-        # change in author
+    if sql.startswith('update mn_books_authors ') \
+            or sql.startswith('delete from mn_books_authors '):
+        # change or delete in author
         match = RE_AUTHOR_BOOK.search(sql)
         if match:
             return match.group(1)
+
+    elif sql.startswith('insert into mn_books_authors (fk_books,'):
+        # add author
+        match = RE_BOOK_ADD_AUTHOR.search(sql)
+        if match:
+            return match.group(1)
+    
     elif sql.startswith('update attributes set  "fk_attriblist" = 245'):
         # change in title
         match = RE_TITLE_ATTRIBS.search(sql)
@@ -79,7 +87,7 @@ def main():
     GutenbergDatabase.DB.connect()
     c  = GutenbergDatabase.DB.get_cursor()
 
-    c.execute("select sql from changelog "
+    c.execute("select sql from public.changelog "
                "where time >= now () - interval '%(goback)s hours' ", {'goback': goback})
 
     to_rebuild = set()
@@ -90,6 +98,7 @@ def main():
     for ebook in to_rebuild:
         range = f'{range}{ebook},' if ebook else range
     if range:
+        info(f'rebuilding {range}')
         subprocess.call(["ebookconverter", "-v", "--build=all", "--range=%s" % to_rebuild])        
     Logger.ebook = 0
     debug("Done AutoRebuild.py")
